Bye weeks added & Table alignment fixed on league picks
Added teams who are on their bye week to user picks and league picks
page.
Fixed alignment issue between NFL scores table and user picks table on
league picks page.

--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,15 @@ h3 {
 	right:		0;
 	margin:		auto;
 }
+
+.spacer {
+	min-width: 150px;
+	max-width: 150px;
+	text-align: right;
+	padding-right: 10px;
+}
+
+.cellHeader {
+	font-size: 17px;
+	font-weight: bold;
+}
